fixed text wrapping with icons, added fav to details

--- a/styles.styl
+++ b/styles.styl
@@ -385,6 +385,7 @@ i.fa-spinner
         border-bottom: rgba(0,0,0, 0.3) solid 3px
         margin-top 0
         margin-bottom 10px
+        padding-right 110px
     h2
         font-size 1.2em
         opacity 0.3 
@@ -441,6 +442,7 @@ i.fa-spinner
         border-bottom: rgba(0,0,0, 0.3) solid 3px
         margin-top 0
         margin-bottom 10px 
+        padding-right 110px
     h2
         font-size 1.2em
         opacity 0.3
@@ -453,7 +455,7 @@ i.fa-spinner
         float right
         text-align right
         padding-left 20px
-    .fa-trash, .fa-pencil
+    .fa-trash, .fa-pencil, .fa-heart, .fa-heart-o
         cursor pointer
         opacity 0.3
         font-size 1.6em
@@ -468,9 +470,11 @@ i.fa-spinner
             color red
             opacity 0.6
     .fa-pencil
-        right 40px
+        right 80px
         &:hover
             color light-blue
+    .fa-trash
+        right 40px
     &:hover 
         shadow-level(3)
     .ingredient, .direction, .desc
